# bs-monitor

./: .gitignore  Dockerfile  README.md  async_monitor.py  docker-compose.yml  monitors.yml  pyproject.toml  run.py  start.py  tasktest.py  test_tasks.yml
monitor/: monitor.py  proxy.py
monitor/tasks/: __init__.py  asda.py  asos.py  base.py  graffitishop.py  johnlewis.py  snipes.py
tests/: conftest.py  test_monitor.py  test_proxy.py
